@@ -1,4 +1,4 @@
-.TH PCRE2PATTERN 3 "16 October 2015" "PCRE2 10.21"
+.TH PCRE2PATTERN 3 "01 November 2015" "PCRE2 10.21"
 .SH NAME
 PCRE2 - Perl-compatible regular expressions (revised API)
 .SH "PCRE2 REGULAR EXPRESSION DETAILS"
@@ -2534,7 +2534,8 @@ For example:
   (?(VERSION>=10.4)yes|no)
 .sp
 This pattern matches "yes" if the PCRE2 version is greater or equal to 10.4, or
-"no" otherwise.
+"no" otherwise. The fractional part of the version number may not contain more 
+than two digits.
 .
 .
 .SS "Assertion conditions"
@@ -3392,6 +3393,6 @@ Cambridge, England.
 .rs
 .sp
 .nf
-Last updated: 16 October 2015
+Last updated: 01 November 2015
 Copyright (c) 1997-2015 University of Cambridge.
 .fi
